# python-template

./: .gitignore  README.md  justfile  main.py  pyproject.toml
docs/: music_knowledge_graph_plan.md
